--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <a href="#" class="navigation__link navigation__user"><img src="/img/header-favorite.svg" alt="Избранное"></a>
         </li>
         <li class="navigation__item">
-          <button href="#" class="navigation__button">Хочу сюда!</button>
+          <a href="#" class="navigation__button">Хочу сюда!</a>
         </li>
       </ul>
     </nav>
