поправка классов по бэму

--- a/catalog.html
+++ b/catalog.html
@@ -12,23 +12,24 @@
 <body>
   <header class="header">
     <nav class="navigation">
-      <ul class="navigation-list">
-        <li class="navigation__item navigation__logo">
-          <img src="./img/header-logo.svg" alt="Sedona" class="header__logo" width="139px" height="70px">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <img src="/img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139px" height="70px">
         </li>
         <li class="navigation__item">
-          <a href="index.html" class="navigation__link">Главная</a>
+          <a href="index.html" class="navigation-link">Главная</a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__link">О Седоне</a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link">Гостиницы</a>
+          <a href="catalog.html" class="navigation-link">Гостиницы</a>
         </li>
       </ul>
-      <ul class="navigation-user">
+      <ul class="navigation__user">
         <li class="navigation__item">
-          <a href="index.html" class="navigation__link navigation__user"><img src="/img/header-search.svg" alt="Поиск">
+          <a href="index.html" class="navigation-link navigation-link--user">
+            <img src="/img/header-search.svg" alt="Поиск">
           </a>
         </li>
         <li class="navigation__item">
@@ -48,30 +49,30 @@
           <a class="breadcrumbs__link" href="index.html"><img src="/img/header-breadcrumbs-home.svg" alt="Главная"></a>
         </li>
         <li class="breadcrumbs__item">
-          <img src="/img/catalog-filter-next.svg" class="breadcrumbs-next">
+          <img src="/img/catalog-filter-next.svg" class="breadcrumbs__next">
         </li>
         <li class="breadcrumbs__item">
           <a class="breadcrumbs__link" href="catalog.html">Гостиницы</a>
         </li>
       </ul>
       <div class="catalog-filter">
-        <form action="https://echo.htmlacademy.ru/" method="get" class="catalog-filter-home">
-          <fieldset class="catalog-filter__field">
-            <legend class="catalog-filter__title">Инфраструктура:</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter__item">
+        <form action="https://echo.htmlacademy.ru/" method="get" class="home">
+          <fieldset class="home__field">
+            <legend class="home__title">Инфраструктура:</legend>
+            <ul class="home__list">
+              <li class="home__item">
                 <label class="control">
                   <input type="checkbox" checked class="control-input" name="pool">
                   Бассейн
                 </label>
               </li>
-              <li class="catalog-filter__item">
+              <li class="home__item">
                 <label class="control">
                   <input type="checkbox" checked class="control-input" name="parking">
                   Парковка
                 </label>
               </li>
-              <li class="catalog-filter__item">
+              <li class="home__item">
                 <label class="control">
                   <input type="checkbox" class="control-input" name="wifi">
                   Wi-Fi
@@ -79,22 +80,22 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset class="catalog-filter__field">
-            <legend class="catalog-filter__title">Тип жилья:</legend>
-            <ul class="catalog-filter-list">
-              <li class="catalog-filter__item">
+          <fieldset class="home__field">
+            <legend class="home__title">Тип жилья:</legend>
+            <ul class="home-list">
+              <li class="home__item">
                 <label class="control">
                   <input type="radio" class="control-input" name="home-type" value="hotel" checked>
                   Гостиница
                 </label>
               </li>
-              <li class="catalog-filter__item">
+              <li class="home__item">
                 <label class="control">
                   <input type="radio" class="control-input" name="home-type" value="motel">
                   Мотель
                 </label>
               </li>
-              <li class="catalog-filter__item">
+              <li class="home__item">
                 <label class="control">
                   <input type="radio" class="control-input" name="home-type" value="appartament">
                   Аппартаменты
@@ -103,11 +104,11 @@
             </ul>
           </fieldset>
         </form>
-        <div class="polzunok">
-          <p class="polzunok-title">Стоимость, ₽:</p>
-          <div class="polzunok-input-cont">
-            <input type="text" class="polzunok-input__left polzunok-input--style" placeholder="от" />
-            <input type="text" class="polzunok-input__right polzunok-input--style" placeholder="до" />
+        <div class="range">
+          <p class="range__title">Стоимость, ₽:</p>
+          <div class="range__cont">
+            <input type="text" class="range__left" placeholder="от" />
+            <input type="text" class="range__right" placeholder="до" />
           </div>
           <div class="catalog-filter-btns">
             <button type="submit" class="catalog-filter-btn">Применить</button>
@@ -126,13 +127,13 @@
           <option value="best">Самые лучшие</option>
         </select>
         <div class="roll-view">
-          <button class="roll-view__grid roll-view__btn">
+          <button class="roll-view__btn">
             <img src="/img/btn-show-all.svg" alt="Сетка" width="16px" height="14px">
           </button>
-          <button class="roll-view__cards roll-view__btn">
+          <button class="roll-view__btn">
             <img src="/img/btn-cards.svg" alt="Карточка" width="16px" height="14px">
           </button>
-          <button class="roll-view__list roll-view__btn">
+          <button class="roll-view__btn">
             <img src="/img/btn-list.svg" alt="Список" width="16px" height="14px">
           </button>
         </div>
@@ -204,7 +205,7 @@
       <div class="other-rolls">
         <ul class="pagination">
           <li class="pagination-item pagination-current">
-            <a class="pagination-link pagination-current--text">1</a>
+            <a class="pagination-link pagination-link--text">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
@@ -216,7 +217,7 @@
             <a class="pagination-link" href="#">4</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link more-link" href="#">...</a>
+            <a class="pagination-link" href="#">...</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">10</a>
@@ -238,14 +239,14 @@
 
     <section class="mailing mailing--catalog">
       <h2 class="hidden">Рассылка</h2>
-      <div class="mailing__content mailing__content--catalog">
+      <div class="mailing__content">
         <h3 class="mailing__title">Подпишись на рассылку</h3>
         <p class="mailing__description">
           Только полезная информация и никакого спама,
           честное бойскаутское!
         </p>
         <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
-          <input type="text" name="email" class="mailing__email mailing__email--catalog" placeholder="Ваш e-mail">
+          <input type="text" name="email" class="mailing__email" placeholder="Ваш e-mail">
           <button type="submit" class="mailing__btn">Подписаться</button>
         </form>
       </div>
