забыл в Index.html поменять классы в хэдере

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
           <img src="/img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139px" height="70px">
         </li>
         <li class="navigation__item">
-          <a href="index.html" class="navigation__link">Главная</a>
+          <a href="index.html" class="navigation-link">Главная</a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__link">О Седоне</a>
         </li>
         <li class="navigation__item">
-          <a href="catalog.html" class="navigation__link">Гостиницы</a>
+          <a href="catalog.html" class="navigation-link">Гостиницы</a>
         </li>
       </ul>
       <ul class="navigation__user">
@@ -31,7 +31,7 @@
           </a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link"><img src="/img/header-favorite.svg" alt="Избранное"></a>
+          <a href="#" class="navigation__link navigation__user"><img src="/img/header-favorite.svg" alt="Избранное"></a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__button">Хочу сюда!</a>
