--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
     <nav class="navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
-          <img src="/img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139px" height="70px">
+          <img src="/img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139" height="70">
         </li>
         <li class="navigation__item">
           <a href="index.html" class="navigation__link">Главная</a>
@@ -49,7 +49,7 @@
           <a class="breadcrumbs__link" href="index.html"><img src="/img/header-breadcrumbs-home.svg" alt="Главная"></a>
         </li>
         <li class="breadcrumbs__item">
-          <img src="/img/catalog-filter-next.svg" class="breadcrumbs__next">
+          <img src="/img/catalog-filter-next.svg" class="breadcrumbs__next" alt="">
         </li>
         <li class="breadcrumbs__item">
           <a class="breadcrumbs__link" href="catalog.html">Гостиницы</a>
@@ -129,13 +129,13 @@
         </select>
         <div class="roll-view">
           <button class="roll-view__btn">
-            <img src="/img/btn-show-all.svg" alt="Сетка" width="16px" height="14px">
+            <img src="/img/btn-show-all.svg" alt="Сетка" width="16" height="14">
           </button>
           <button class="roll-view__btn">
-            <img src="/img/btn-cards.svg" alt="Карточка" width="16px" height="14px">
+            <img src="/img/btn-cards.svg" alt="Карточка" width="16" height="14">
           </button>
           <button class="roll-view__btn">
-            <img src="/img/btn-list.svg" alt="Список" width="16px" height="14px">
+            <img src="/img/btn-list.svg" alt="Список" width="16" height="14">
           </button>
         </div>
       </div>
