--- a/index.html
+++ b/index.html
@@ -8,174 +8,174 @@
 </head>
 
 <body>
-  <header class="header">
-    <nav class="navigation">
-      <ul class="navigation__list">
-        <li class="navigation__item">
-          <img src="/img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139px" height="70px">
-        </li>
-        <li class="navigation__item">
-          <a href="index.html" class="navigation__link">Главная</a>
-        </li>
-        <li class="navigation__item">
-          <a href="#" class="navigation__link">О Седоне</a>
-        </li>
-        <li class="navigation__item">
-          <a href="catalog.html" class="navigation__link">Гостиницы</a>
-        </li>
-      </ul>
-      <ul class="navigation__user">
-        <li class="navigation__item">
-          <a href="index.html" class="navigation-link navigation-link--user">
-            <img src="/img/header-search.svg" alt="Поиск">
-          </a>
-        </li>
-        <li class="navigation__item">
-          <a href="#" class="navigation__link navigation__user"><img src="/img/header-favorite.svg" alt="Избранное"></a>
-        </li>
-        <li class="navigation__item">
-          <a href="#" class="navigation__button">Хочу сюда!</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main">
-    <h1 class="hidden">Sedona</h1>
-    <section class="description">
-      <div class="main-logo">
-        <img src="/img/logo.svg" alt="Sedona" class="logo" width="458px" height="352px">
-      </div>
-      <h2 class="hidden">Описание</h2>
-      <h3 class="description__title">Седона — небольшой городок в Аризоне,
-        заслуживающий большего!</h3>
-      <p class="description__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-    </section>
-    <div class="causes-grid-cont">
-      <section class="cause-1">
-        <h2 class="hidden">Первая причина</h2>
-        <div class="cause cause--1-2">
-          <h3 class="cause__title">Настоящий городок</h3>
-          <p class="cause__number">- №1 -</p>
-          <p class="cause__description">Седона — не аттракцион для туристов, там течёт
-            своя жизнь</p>
-        </div>
-        <img src="/img/causes-photo1.jpg" alt="Город" class="cause-1__wallpaper" width="800px" height="384px">
-      </section>
-      <section class="">
-        <h2 class="hidden">Преимущества</h2>
-        <ul class="advantages">
-          <li class="advantage advantage--1-3">
-            <img src="/img/advantage-1.svg" width="75" height="72" class="advantage__icon">
-            <h3 class="advantage__title">Жильё</h3>
-            <p class="advantage__description">
-              Рекомендуем пожить
-              в настоящем мотеле,
-              всё как в кино!
-            </p>
+    <header class="header">
+      <nav class="navigation">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <img src="/img/header-logo.svg" alt="Sedona" class="navigation__logo" width="139" height="70">
           </li>
-          <li class="advantage">
-            <img src="/img/advantage-2.svg" width="74" height="70" class="advantage__icon">
-            <h3 class="advantage__title">Еда</h3>
-            <p class="advantage__description">
-              Всегда заказывайте
-              топовый фирменный бургер, вы не разочаруетесь!
-            </p>
+          <li class="navigation__item">
+            <a href="index.html" class="navigation__link">Главная</a>
           </li>
-          <li class="advantage advantage--1-3">
-            <img src="/img/advantage-3.svg" width="64" height="76" class="advantage__icon">
-            <h3 class="advantage__title">Сувениры</h3>
-            <p class="advantage__description">
-              Не только китайского,
-              но и настоящего местного производства!
-            </p>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link">О Седоне</a>
+          </li>
+          <li class="navigation__item">
+            <a href="catalog.html" class="navigation__link">Гостиницы</a>
           </li>
         </ul>
-      </section>
-      <section class="cause-2">
-        <h2 class="hidden">Вторая причина</h2>
-        <img src="/img/causes-photo2.jpg" alt="Мост дьявола" class="cause-2__wallpaper">
-        <div class="cause cause--1-2">
-          <h3 class="cause__title">Там есть мость дьявола</h3>
-          <p class="cause__number">- №2 -</p>
-          <p class="cause__description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-        </div>
-      </section>
-      <section class="other-causes">
-        <h2 class="hidden">Остальные причины</h2>
-        <ul class="cause-list">
-          <li class="cause cause--3-5">
-            <h3 class="cause__title">Небольшая площадь</h3>
-            <p class="cause__number">- №3 -</p>
-            <p class="cause__description">
-              Все достопримечательности
-              находятся очень близко
-            </p>
+        <ul class="navigation__user">
+          <li class="navigation__item">
+            <a href="index.html" class="navigation-link navigation-link--user">
+              <img src="/img/header-search.svg" alt="Поиск">
+            </a>
           </li>
-          <li class="cause cause--4">
-            <h3 class="cause__title">Красивая дорога</h3>
-            <p class="cause__number">- №4 -</p>
-            <p class="cause__description">
-              Ехать в Седону из Лас-Вегаса совсем не скучно!
-            </p>
+          <li class="navigation__item">
+            <a href="#" class="navigation__link "><img src="/img/header-favorite.svg" alt="Избранное"></a>
           </li>
-          <li class="cause cause--3-5">
-            <h3 class="cause__title">Мало туристов</h3>
-            <p class="cause__number">- №5 -</p>
-            <p class="cause__description">
-              Большинство едет в Гранд Каньон и толпится там
-            </p>
+          <li class="navigation__item">
+            <a href="#" class="navigation__button">Хочу сюда!</a>
           </li>
         </ul>
+      </nav>
+    </header>
+    <main class="main">
+      <h1 class="hidden">Sedona</h1>
+      <section class="description">
+        <div class="main-logo">
+          <img src="/img/logo.svg" alt="Sedona" class="logo" width="458" height="352">
+        </div>
+        <h2 class="hidden">Описание</h2>
+        <h3 class="description__title">Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h3>
+        <p class="description__causes">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
-    </div>
-    <section class="hotel">
-      <h2 class="hidden">Поиск гостиницы</h2>
-      <div class="hotel__content">
-        <h3 class="hotel__title">Заинтересовались?</h3>
-        <p class="hotel__description">
-          Укажите предполагаемые даты поездки,
-          и мы покажем вам лучшие предложения гостиниц в Седоне
-        </p>
-        <a href="catalog.html" class="hotel__link">Поиск гостиницы в Седоне</a>
-      </div>
-    </section>
-    <section class="mailing">
-      <h2 class="hidden">Рассылка</h2>
-      <div class="mailing__content">
-        <h3 class="mailing__title">Подпишись на рассылку</h3>
-        <p class="mailing__description">
-          Только полезная информация и никакого спама,
-          честное бойскаутское!
-        </p>
-        <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
-          <input type="text" name="email" class="mailing__email" placeholder="Ваш e-mail">
-          <button type="submit" class="mailing__btn">Подписаться</button>
-        </form>
-      </div>
-    </section>
-  </main>
-  <footer class="footer">
-    <section class="footer__content">
-      <div class="footer__grid-cont">
-        <nav class="social-links">
-          <ul class="social">
-            <li class="social__item">
-              <a href="#"><img src="/img/footer-twitter.svg" alt="Twitter"></a>
+      <div class="causes-grid-cont">
+        <section class="cause-1">
+          <h2 class="hidden">Первая причина</h2>
+          <div class="cause cause--1-2">
+            <h3 class="cause__title">Настоящий городок</h3>
+            <p class="cause__number">- №1 -</p>
+            <p class="cause__description">Седона — не аттракцион для туристов, там течёт
+              своя жизнь</p>
+          </div>
+          <img src="/img/causes-photo1.jpg" alt="Город" class="cause-1__wallpaper" width="800px" height="384px">
+        </section>
+        <section class="">
+          <h2 class="hidden">Преимущества</h2>
+          <ul class="advantages">
+            <li class="advantage advantage--1-3">
+              <img src="/img/advantage-1.svg" width="75" height="72" class="advantage__icon">
+              <h3 class="advantage__title">Жильё</h3>
+              <p class="advantage__description">
+                Рекомендуем пожить
+                в настоящем мотеле,
+                всё как в кино!
+              </p>
             </li>
-            <li class="social__item">
-              <a href="#"><img src="/img/footer-facebook.svg" alt="Facebook"></a>
+            <li class="advantage">
+              <img src="/img/advantage-2.svg" width="74" height="70" class="advantage__icon">
+              <h3 class="advantage__title">Еда</h3>
+              <p class="advantage__description">
+                Всегда заказывайте
+                топовый фирменный бургер, вы не разочаруетесь!
+              </p>
             </li>
-            <li class="social__item">
-              <a href="#"><img src="/img/footer-youtube.svg" alt="Youtube"></a>
-            </li>
+            <li class="advantage advantage--1-3">
+              <img src="/img/advantage-3.svg" width="64" height="76" class="advantage__icon">
+              <h3 class="advantage__title">Сувениры</h3>
+              <p class="advantage__description">
+                Не только китайского,
+                но и настоящего местного производства!
+              </p>
             </li>
           </ul>
-        </nav>
-        <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
-        <img src="./img/logo-htmlacademy.svg" alt="HTML-Academy" class="footer__logo">
+        </section>
+        <section class="cause-2">
+          <h2 class="hidden">Вторая причина</h2>
+          <img src="/img/causes-photo2.jpg" alt="Мост дьявола" class="cause-2__wallpaper">
+          <div class="cause cause--1-2">
+            <h3 class="cause__title">Там есть<br>мость дьявола</h3>
+            <p class="cause__number">- №2 -</p>
+            <p class="cause__description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </div>
+        </section>
+        <section class="other-causes">
+          <h2 class="hidden">Остальные причины</h2>
+          <ul class="cause-list">
+            <li class="cause cause--3-5">
+              <h3 class="cause__title">Небольшая площадь</h3>
+              <p class="cause__number">- №3 -</p>
+              <p class="cause__description">
+                Все достопримечательности
+                находятся очень близко
+              </p>
+            </li>
+            <li class="cause cause--4">
+              <h3 class="cause__title">Красивая дорога</h3>
+              <p class="cause__number">- №4 -</p>
+              <p class="cause__description">
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="cause cause--3-5">
+              <h3 class="cause__title">Мало туристов</h3>
+              <p class="cause__number">- №5 -</p>
+              <p class="cause__description">
+                Большинство едет в Гранд Каньон и толпится там
+              </p>
+            </li>
+          </ul>
+        </section>
       </div>
-    </section>
-  </footer>
+      <section class="hotel">
+        <h2 class="hidden">Поиск гостиницы</h2>
+        <div class="hotel__content">
+          <h3 class="hotel__title">Заинтересовались?</h3>
+          <p class="hotel__description">
+            Укажите предполагаемые даты поездки,
+            и мы покажем вам лучшие предложения гостиниц в Седоне
+          </p>
+          <a href="catalog.html" class="hotel__link">Поиск гостиницы в Седоне</a>
+        </div>
+      </section>
+      <section class="mailing">
+        <h2 class="hidden">Рассылка</h2>
+        <div class="mailing__content">
+          <h3 class="mailing__title">Подпишись на рассылку</h3>
+          <p class="mailing__description">
+            Только полезная информация и никакого спама,
+            честное бойскаутское!
+          </p>
+          <form action="https://echo.htmlacademy.ru/" method="post" class="mailing__form">
+            <input type="text" name="email" class="mailing__email" placeholder="Ваш e-mail">
+            <button type="submit" class="mailing__btn">Подписаться</button>
+          </form>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <section class="footer__content">
+        <div class="footer__grid-cont">
+          <nav class="social-links">
+            <ul class="social">
+              <li class="social__item">
+                <a href="#"><img src="/img/footer-twitter.svg" alt="Twitter"></a>
+              </li>
+              <li class="social__item">
+                <a href="#"><img src="/img/footer-facebook.svg" alt="Facebook"></a>
+              </li>
+              <li class="social__item">
+                <a href="#"><img src="/img/footer-youtube.svg" alt="Youtube"></a>
+              </li>
+              </li>
+            </ul>
+          </nav>
+          <a href="tel:+78128121212" class="contact-phone">+7 (812) 812-12-12</a>
+          <img src="./img/logo-htmlacademy.svg" alt="HTML-Academy" class="footer__logo">
+        </div>
+      </section>
+    </footer>
 </body>
 
 </html>
