--- a/catalog.html
+++ b/catalog.html
@@ -29,11 +29,13 @@
       <ul class="navigation__user">
         <li class="navigation__item">
           <a href="index.html" class="navigation-link navigation-link--user">
-            <img src="/img/header-search.svg" alt="Поиск">
+            <img src="/img/header-search.svg" alt="Поиск" width="18" height="18">
           </a>
         </li>
         <li class="navigation__item">
-          <a href="#" class="navigation__link navigation__user"><img src="/img/header-favorite.svg" alt="Избранное"></a>
+          <a href="#" class="navigation__link navigation__user">
+            <img src="/img/header-favorite.svg" alt="Избранное" width="18" height="17"> 
+          </a>
         </li>
         <li class="navigation__item">
           <a href="#" class="navigation__button">Хочу сюда!</a>
@@ -46,10 +48,12 @@
       <h1 class="catalog-header__title">Гостиницы Седоны</h1>
       <ul class="breadcrumbs">
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="index.html"><img src="/img/header-breadcrumbs-home.svg" alt="Главная"></a>
+          <a class="breadcrumbs__link" href="index.html">
+            <img src="/img/header-breadcrumbs-home.svg" alt="Главная" width="12" height="12">
+          </a>
         </li>
         <li class="breadcrumbs__item">
-          <img src="/img/catalog-filter-next.svg" class="breadcrumbs__next" alt="">
+          <img src="/img/catalog-filter-next.svg" class="breadcrumbs__next" alt="стрелка" width="5" height="8">
         </li>
         <li class="breadcrumbs__item">
           <a class="breadcrumbs__link" href="catalog.html">Гостиницы</a>
@@ -141,61 +145,61 @@
       </div>
       <ul class="hostel-list">
         <li class="hostel-card">
-          <img src="/img/amara-resort.jpg" alt="Amara Resort & Spa" class="card-img" width="300px" height="206px">
+          <img src="/img/amara-resort.jpg" alt="Amara Resort & Spa" class="card-img" width="300" height="206">
           <p class="card-title">Amara Resort & Spa</p>
           <p class="hostel-type">Гостиница</p>
           <p class="hostel-cost">От 4000 ₽</p>
           <a class="btn-extra" href="#">Подробнее</a>
           <button class="btn-favorite">В избранное</button>
           <div class="rating-stars">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда" >
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
           </div>
           <p class="rating-number">Рейтинг: 8,5</p>
         </li>
         <li class="hostel-card">
-          <img src="/img/desert-quail.jpg" alt="Desert Quail Inn" class="card-img" width="300px" height="206px">
+          <img src="/img/desert-quail.jpg" alt="Desert Quail Inn" class="card-img" width="300" height="206">
           <p class="card-title">Desert Quail Inn</p>
           <p class="hostel-type">Гостиница</p>
           <p class="hostel-cost">От 4000 ₽</p>
           <a class="btn-extra" href="#">Подробнее</a>
           <button class="btn-favorite">В избранное</button>
           <div class="rating-stars">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
           </div>
           <p class="rating-number">Рейтинг: 8,9</p>
         </li>
         <li class="hostel-card">
-          <img src="/img/villas-at-poco.jpg" alt="Villas at Poco Diablo" class="card-img" width="300px" height="206px">
+          <img src="/img/villas-at-poco.jpg" alt="Villas at Poco Diablo" class="card-img" width="300" height="206">
           <p class="card-title">Villas at Poco Diablo</p>
           <p class="hostel-type">Гостиница</p>
           <p class="hostel-cost">От 4000 ₽</p>
           <a class="btn-extra" href="#">Подробнее</a>
           <button class="btn-favorite btn-favorite--active">В избранном</button>
           <div class="rating-stars">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
           </div>
           <p class="rating-number">Рейтинг: 8,5</p>
         </li>
         <li class="hostel-card">
-          <img src="/img/amara-resort.jpg" alt="Amara Resort & Spa" class="card-img" width="300px" height="206px">
+          <img src="/img/amara-resort.jpg" alt="Amara Resort & Spa" class="card-img" width="300" height="206">
           <p class="card-title">Amara Resort & Spa</p>
           <p class="hostel-type">Гостиница</p>
           <p class="hostel-cost">От 4000 ₽</p>
           <a class="btn-extra" href="#">Подробнее</a>
           <button class="btn-favorite">В избранное</button>
           <div class="rating-stars">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
-            <img src="/img/star-rating.svg" class="rating-stars__star">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
+            <img src="/img/star-rating.svg" class="rating-stars__star" alt="Звезда">
           </div>
           <p class="rating-number">Рейтинг: 8,5</p>
         </li>
