--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link rel="icon" href="/favicon.png" sizes="32x32" type="image/png">
   <link rel="stylesheet" type="text/css" href="/styles/style.css">
 </head>
 
@@ -59,7 +60,7 @@
             <p class="cause__description">Седона — не аттракцион для туристов, там течёт
               своя жизнь</p>
           </div>
-          <img src="/img/causes-photo1.jpg" alt="Город" class="cause-1__wallpaper" width="800px" height="384px">
+          <img src="/img/causes-photo1.jpg" alt="Город" class="cause-1__wallpaper" width="800" height="384">
         </section>
         <section class="">
           <h2 class="hidden">Преимущества</h2>
@@ -74,7 +75,7 @@
               </p>
             </li>
             <li class="advantage">
-              <img src="/img/advantage-2.svg" width="74" height="70" class="advantage__icon">
+              <img src="/img/advantage-2.svg" width="74" height="70" alt="Иконка" class="advantage__icon">
               <h3 class="advantage__title">Еда</h3>
               <p class="advantage__description">
                 Всегда заказывайте
@@ -82,7 +83,7 @@
               </p>
             </li>
             <li class="advantage advantage--1-3">
-              <img src="/img/advantage-3.svg" width="64" height="76" class="advantage__icon">
+              <img src="/img/advantage-3.svg" width="64" height="76" alt="Иконка" class="advantage__icon">
               <h3 class="advantage__title">Сувениры</h3>
               <p class="advantage__description">
                 Не только китайского,
@@ -93,7 +94,7 @@
         </section>
         <section class="cause-2">
           <h2 class="hidden">Вторая причина</h2>
-          <img src="/img/causes-photo2.jpg" alt="Мост дьявола" class="cause-2__wallpaper">
+          <img src="/img/causes-photo2.jpg" alt="Мост дьявола" alt="Иконка" class="cause-2__wallpaper">
           <div class="cause cause--1-2">
             <h3 class="cause__title">Там есть<br>мость дьявола</h3>
             <p class="cause__number">- №2 -</p>
@@ -167,7 +168,6 @@
               </li>
               <li class="social__item">
                 <a href="#"><img src="/img/footer-youtube.svg" alt="Youtube"></a>
-              </li>
               </li>
             </ul>
           </nav>
